# AndroidRobot

./: .gitignore  README.md
android/: AndroidManifest.xml
android-audio-test/: AndroidManifest.xml  CMakeLists.txt  build.xml  rebuild.sh
android-audio-test/jni/: AAFilter.lo  BPMDetect.lo  CMakeLists.txt  FIFOSampleBuffer.lo  FIRFilter.lo  Makefile  Makefile.in  NativeSoundTouch.i  PeakFinder.lo  RateTransposer.lo  RobotAudio.cpp  RobotAudio.h  SoundTouch.lo  TDStretch.lo  WavFile.cpp  WavFile.h  audio  cpu_detect_x86_gcc.lo  libSoundTouch.la  log.h  mmx_optimized.lo  soundtouch_config.h  soundtouch_config.h.in  sse_optimized.lo
android-audio-test/res/layout/: main.xml
android-audio-test/res/values/: strings.xml
android-audio-test/src/com/polysfactory/robotaudio/: Top.java
android-audio-test/src/com/polysfactory/robotaudio/jni/: NativeSoundTouch.java  (+7 more)
android-contact-photo-manager/: AndroidManifest.xml
android-contact-photo-manager/res/layout/: people_detail.xml
android-contact-photo-manager/res/values/: strings.xml
android-contact-photo-manager/src/com/polysfactory/contactphoto/: PeopleDetailActivity.java  Top.java
android-face-demo/: AndroidManifest.xml  build.xml  default.properties
android-face-demo/jni/: Android.mk  BlinkDetector.cpp  BlinkDetector.h  BlinkModule.i  CMakeLists.txt  EigenFace.cpp  EigenFace.h  EigenFaceCUI.cpp  FaceCrop.cpp  FaceCrop.h  FaceCropCUI.cpp  FaceCropCUI.h  FaceFeatureDump.cpp  FaceFeatureMatch.cpp  FaceRecognizer.cpp  FaceRecognizer.h  HaarFaceDetector.cpp  HaarFaceDetector.h  KmeansTracker.cpp  KmeansTracker.h  Makefile  NativeFaceCrop.i  NativeFaceRecognizer.i  ObjectMatcher.cpp  ObjectMatcher.h  crop  eigen  facedata.xml  log.h  test.txt  train.txt
android-face-demo/res/values/: strings.xml
android-face-demo/src/com/polysfactory/facerecognition/: App.java  AudioCommander.java  Brain.java  CommandUtils.java  EmotionManager.java  FacePhotoManager.java  MainActivity.java  UsbCommander.java
android/res/layout/: top.xml
arduino/androidkun_pde/: androidkun_pde.pde
doc/: protocol_with_arduino.txt
(+55 files in other folders)
